# myteam

./: .gitignore  AGENTS.md  IMPROVEMENTS.md  LICENSE  README.md  ROADMAP.md  cdx  pyproject.toml
.agents/: agent-body.md  changelog.md  demo.py  pi-full.md  pi-mini.md  pi.md  poet.md  testing-philosophy.md  todo.md
.myteam/: .config.yaml  agent.py  conclude.py  demo-python.py  demo-yaml.yaml  demo.py  demo.yaml  demo_workflow.py  development.py  explore.py  load.py  role.md
design/: interface.md  tests.md  trusted.md
meetings/: 2026-04-01-1105.md  2026-04-06-1105.md  2026-04-08-1100.md  2026-04-13-1100.md  2026-04-15-1100.md  2026-04-28-1659-pair-programming-workflow-design.md  2026-04-30-1230.md  2026-05-04-1530.md  2026-05-05-1600.md  2026-05-06-1600.md  2026-05-13-1600.md  2026-05-20-1600.md  2026-05-21-1600.md  2026-05-22-1600.md  2026-05-28-1600.md
migrations/: 0.2.5.md
planning_files/: DECISIONS.md  PLAN.md  SEQUENCE_DIAGRAM.md  template.yaml
src/: CHANGELOG.md  prefix.py
tests/: conftest.py  test_agent_result_channel.py  test_agent_runtime_config.py  test_backend_adapters.py  test_child_workflow_command.py  test_default_task.py  test_default_workflow.py  test_development_workflow.py  test_docs_mismatch_cleanup.py  test_download_flow.py  test_get_skills_and_tasks.py  test_init_flow.py  test_loading_flow.py  test_markdown_workflow_wrapper.py  test_mothership_pty_workflows.py  test_mothership_report_race.py  test_mothership_workflow_only.py  test_myteam_config.py  test_myteam_pty_session.py  test_prompt_rendering.py  test_pty_session.py  test_reference_resolver.py  test_remove_flow.py  test_role_and_skill_creation.py  test_run_agent_standalone.py  test_session_resolution.py  test_step_executor.py  (+17 more)
(+388 files in other folders)
